[metadata]
name = MD4README.md
version = 0.0.1
author = Michael E Mulvey
author_email = michael.e.mulvey@gmail.com
description = An Example of how to use Markdown on PYPI.org
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Caveman-Software/MD4README
project_urls =
    Bug Tracker = https://github.com/Caveman-Software/MD4README/issues
classifiers =
    Programming Language :: Markdown
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
include_package_data = false
package_dir =
    = src
    
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
